# server/controllers/accounts.ts
@@ -1,7 +1,9 @@
 import { genSaltSync, hashSync } from 'bcrypt';
 import { NextFunction, Request, Response } from 'express';
+import { pick } from 'lodash';
 
-import { Errors } from '../lib/errors';
+import { Errors, Forbidden, STATUS_CODE } from '../lib/errors';
+import { Logger } from '../lib/logger';
 import { account } from '../repository/accounts';
 import { Account } from '../types/accounts';
 
@@ -30,5 +32,27 @@ export async function createAccount(req: Request, res: Response, next: NextFunct
   return res.status(STATUS_CODE.SUCCESS).json({
     message: 'account created, confirmation code has been sent to your email',
     data: acc,
+  });
+}
+
+export async function getAccounts(req: Request, res: Response, next: NextFunction) {
+  const { accountid } = req.params;
+
+  Logger.debug({ id: req.authenticatedAccount.id, accountid: Number(accountid) });
+  // only system admins can fetch any accounts resource
+  if (req.authenticatedAccount.id !== accountid && !req.isSysAdmin) {
+    return new Forbidden('Unauthorized');
+  }
+
+  if (req.authenticatedAccount.id !== accountid) {
+    const response = await account.findOneById(accountid as string);
+    if (response instanceof Errors) {
+      return next(response);
+    }
+  }
+
+  return res.status(STATUS_CODE.SUCCESS).json({
+    message: 'account resource',
+    data: pick(req.authenticatedAccount, ['id', 'email', 'username', 'first_name', 'last_name', 'confirmed']),
   });
 }
